<resources>
    <string name="app_name">필링DW</string>
    <string name="page_cardPW">카드 비밀번호 설정</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="CUI_Confirm">확인</string>
    <string name="CUI_Back">돌아가기</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="TODO"> </string>
    <string name="Test">TEST</string>
    <string name="LoginMain_Logo_title">세상의 모든 가치를 담는다</string>
    <string name="LoginMain_ID">아이디</string>
    <string name="LoginMain_ID_Error">올바른 아이디가 아닙니다</string>
    <string name="LoginMain_PW">비밀번호</string>
    <string name="LoginMain_PW_Error">비밀번호가 맞지 않습니다</string>
    <string name="LoginMain_AutoLogin">자동 로그인</string>
    <string name="LoginMain_Find">ID/PW찾기</string>
    <string name="LoginMain_LoginBtn">로그인</string>
    <string name="Register">회원가입</string>
    <string name="Register_Welcome">필링은 처음이신가요? 환영합니다!</string>
    <string name="Register_PWCheck">비밀번호 확인</string>
    <string name="Register_Promise">"세상의 가치를 담는다 - 필링' 을 이용하시기 위해서는 반드시 아래 약관에 동의하셔야 합니다.</string>
    <string name="Register_Checkbox1">이용약관에 동의합니다</string>
    <string name="Register_Checkbox_Detail">상세보기</string>
    <string name="Register_Checkbox2">개인정보 수집 및 이용에 동의합니다</string>
    <string name="Register_IDCheck_Message">이미 사용중인 아이디입니다</string>
    <string name="Register_PWCheck_Message">비밀번호가 일치하지 않습니다</string>
    <string name="Register_Continue">계속하기</string>
    <string name="CardPW_Title">결제 비밀번호 설정</string>
    <string name="CardPW_PWinput">결제 비밀번호 6자리를 설정해주세요</string>
    <string name="CardPW_PWinput2">다시 한번 비밀번호 6자리를 입력해주세요</string>
    <string name="CardPW_PWinput3">가입이 완료되었습니다!</string>
    <string name="CardPW_PWinput4">확인 버튼을 누르시면 로그인 페이지로 돌아갑니다</string>
    <string name="Find_FindBar">|</string>
    <string name="Find_InputPhone">휴대폰 번호 입력</string>
    <string name="Find_InputPhone_NO">올바른 핸드폰 번호가 아닙니다.</string>
    <string name="Find_InputNum">인증번호 입력</string>
    <string name="Find_InputNum_NO">인증번호가 틀렸습니다</string>
    <string name="Find_YourID">회원님의 아이디는</string>
    <string name="Find_ID">kdw0310@ajou.ac.kr</string>
    <string name="Find_SendTempPW">임시비밀번호 보내기</string>
    <string name="Find_FindID">아이디 찾기</string>
    <string name="FindID_Guide">※ 회원가입 시 등록한 휴대폰 번호를 입력해주세요.</string>
    <string name="FindID_ID">등록한 아이디</string>
    <string name="FindID_IDInvalid">유효하지 않은 아이디입니다.</string>
    <string name="Find_FindPW">비밀번호 찾기</string>
    <string name="FindPW_Guide">※ 회원가입 시 등록한 아이디를 입력해주세요.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Drawer_ID">kdw0310@ajou.ac.kr</string>
    <string name="Drawer_Cash">Cash</string>
    <string name="Drawer_Cash_Count">12,325 Cash</string>
    <string name="Drawer_Mileage">마일리지</string>
    <string name="Drawer_Mileage_Count">14,952,000 Points</string>
    <string name="Drawer_Logout">로그아웃</string>
    <string name="Drawer_Menu_Revive">Revive Cash</string>
    <string name="Drawer_Menu_CashCharge">Cash 충전</string>
    <string name="Drawer_Menu_CashPresent">Cash 선물</string>
    <string name="Drawer_Menu_CashExchange">Cash 환전</string>
    <string name="Drawer_Menu_Etc">안내</string>
    <string name="Drawer_Menu_Alert">불편신고</string>
    <string name="Drawer_Menu_Info">공지사항</string>
    <string name="Drawer_Menu_FAQ">FAQ</string>
    <string name="Drawer_Menu_System">시스템 정보</string>
    <string name="Drawer_Menu_Policy">이용약관</string>
    <string name="Dongmu_List">필링마트 리스트</string>
    <string name="Dongmu_Search">필링마트 검색</string>
    <string name="Dongmu_SearchHint">찾으시는 매장을 검색해 주세요</string>
    <string name="Dongmu_SearchResult">검색 결과가 없습니다.</string>
    <string name="Dongmu_SearchResult1">￮ 단어의 철자가 정확한지 확인해주세요.</string>
    <string name="Dongmu_SearchResult2">￮ 검색 단어 수를 줄이거나, 다른 검색어로 검색해주세요.</string>
    <string name="Dongmu_SearchResult3">￮ 보다 일반적인 검색어로 다시 검색해보세요.</string>
    <string name="DongmuDetail_Title">딘타이펑</string>
    <string name="DongmuDetail_TitleMarket">딘타이펑</string>
    <string name="DongmuDetail_TitleLocation1">가게 위치</string>
    <string name="DongmuDetail_TitleLocatio2">서울 서초구 서초대로 73길 12 세계빌딩 2층</string>
    <string name="DongmuDetail_TitleTime1">영업시간</string>
    <string name="DongmuDetail_TitleTime2">11:00 ~ 23:00</string>
    <string name="DongmuDetail_TitleTag">#딤섬 #딤섬맛집 #샤오롱바오 #슈마이 #단단면 </string>
    <string name="DongmuDetail_Intro">저희 딘타이펑은 30년 전통의 비법을 5대째 전수받아 원조 감자탕의 명성을 이어가고있습니다. 매일 새벽에 들어오는 신선한 돼지 감자 뼈와 24시간 우려낸 커피를 사용합니다. 딘타이펑은 “크고 풍요로운 솥”이라는 뜻으로 딤섬 전문 장인들이 정성을 담아 푸짐하고 맛있게 대접하고자 하는 딘타이펑의 마음을 담았습니다.</string>
    <string name="DongmuDetail_Intro1">주차</string>
    <string name="DongmuDetail_Intro2">휴무일</string>
    <string name="DongmuDetail_Intro3">사업자 정보</string>
    <string name="DongmuDetail_Intro4">수상 경력</string>
    <string name="DongmuDetail_IntroText1">2시간 무료 / 상가 내 지하주차장 2,3층 이용가능</string>
    <string name="DongmuDetail_IntroText2">매주 월요일 휴무 </string>
    <string name="DongmuDetail_IntroText3">대표자명 : 김대우</string>
    <string name="DongmuDetail_IntroText4">사업자번호 : 123–120–10292–10202</string>
    <string name="DongmuDetail_IntroText11">뉴욕타임즈 선정“세계 10대 레스토랑</string>
    <string name="DongmuDetail_IntroText12">미슐랭 스타 3년 연속 선정</string>
    <string name="DongmuDetail_IntroText13">포브스지 선정 “세계 최고의 레스토랑”</string>
    <string name="DongmuDetail_IntroText14">아시아 베스트 레스토랑 1위 선정</string>
    <string name="DongmuDetail_RecommendTex1">오늘의</string>
    <string name="DongmuDetail_RecommendTex2">추천</string>
    <string name="DongmuDetail_RecommendTex3">메뉴</string>
    <string name="DongmuDetail_CarouselText1">카페라떼</string>
    <string name="DongmuDetail_CarouselText2">4,500원</string>
    <string name="DongmuDetail_CarouselText3">팬케이크</string>
    <string name="DongmuDetail_CarouselText4">6,500원</string>
    <string name="DongmuDetail_CarouselText5">티라미수</string>
    <string name="DongmuDetail_CarouselText6">6,000원</string>
    <string name="DongmuDetail_Star">평균 4.5점</string>
    <string name="DongmuDetail_Star11">7월</string>
    <string name="DongmuDetail_Star12">4.5</string>
    <string name="DongmuDetail_Star21">8월</string>
    <string name="DongmuDetail_Star22">3.0</string>
    <string name="DongmuDetail_Star31">9월</string>
    <string name="DongmuDetail_Star32">4.0</string>
    <string name="DongmuDetail_Star41">10월</string>
    <string name="DongmuDetail_Star42">3.0</string>
    <string name="DongmuDetail_Star51">11월</string>
    <string name="DongmuDetail_Star52">4.5</string>
    <string name="DongmuDetail_Menu001">샤오롱빠오 샘플러</string>
    <string name="DongmuDetail_Menu002">16,000원(10개)</string>
    <string name="DongmuDetail_Menu011">새우 샤오롱빠오</string>
    <string name="DongmuDetail_Menu012">16,000원(10개)</string>
    <string name="DongmuDetail_ReviewGuide">관련없는 글 (비방, 홍보, 도배 등)은 삭제됩니다.</string>
    <string name="DongmuDetail_ReviewBtn">작성하기</string>
    <string name="DongmuDetail_Member01">김</string>
    <string name="DongmuDetail_Comment">리뷰를 작성해주세요</string>
    <string name="Bottom_Filling">필링</string>
    <string name="Bottom_Dongmu">필링마트</string>
    <string name="Bottom_Coupon">상품권</string>
    <string name="Bottom_Info">내 정보</string>
    <string name="Filling_Dongmu">필링마트</string>
    <string name="Filling_Coupon">모바일 상품권</string>
    <string name="Filling_Shopping">내 장바구니</string>
    <string name="Filling_Drive">대리운전</string>
    <string name="Filling_Lecture">강좌</string>
    <string name="Filling_Media">동영상</string>
    <string name="Filling_Webtoon">웹툰</string>
    <string name="Filling_News">뉴스</string>
    <string name="Filling_Flower">꽃배달</string>
    <string name="Filling_Talk">전문상담</string>
    <string name="Filling_Donation">기부</string>
    <string name="Filling_Fund">펀드</string>
    <string name="Filling_Free">무료충전</string>
    <string name="Filling_AD">광고</string>
    <string name="Filling_Alert">공지사항</string>
    <string name="Filling_Alert_More">더보기</string>
    <string name="Filling_PopupBtn1">다시 보지 않기</string>
    <string name="Filling_PopupBtn2">닫기</string>
    <string name="Footer_Section1">사업자 정보확인</string>
    <string name="Footer_Section2">이용약관</string>
    <string name="Footer_Section3">개인정보처리방침</string>
    <string name="Footer_Middle1">대표자명 : 김대우 | 이메일 : kdw0310@ajou.ac.kr</string>
    <string name="Footer_Middle2">통신판매업신고 : 현재는 회사가 도망가서 없어용</string>
    <string name="Footer_Middle3">사업자등록번호 : 123–45–65478 | 고객센터 : 1588–1234</string>
    <string name="Complain_Hint">불편사항을 적어주세요</string>
    <string name="Policy_Title">이용약관</string>
    <string name="Policy_Text1">본 약관(이하 ‘본 약관’이라 함)은 더필홀딩스(이하 ‘당사’라 함)가 제공하는 더필홀딩스에 관한 모든 제품 및 서비스(이하 ‘본 서비스’라 함)의 이용에 관한 조건에 대해 본 서비스를 이용하는 고객(이하 ‘고객’이라 함)과 당사간에 정하는 것입니다.</string>
    <string name="Policy_Text2">1. 정의</string>
    <string name="Policy_Text3">본 약관에서는 다음 용어를 사용합니다.</string>
    <string name="Policy_Text4">1.1. ‘콘텐츠’란 문장, 음성, 음악, 이미지, 동영상, 소프트웨어, 프로그램, 코드 기타 정보를 말합니다.</string>
    <string name="Policy_Text5">1.2. ‘본 콘텐츠’란 본 서비스를 통해 접속할 수 있는 콘텐츠를 말합니다.</string>
    <string name="Policy_Text6">1.3. ‘투고 콘텐츠’란 고객이 본 서비스에 투고, 송신, 업로드한 콘텐츠를 말합니다.</string>
    <string name="Policy_Text7">1.4. ‘코인’이란 본 서비스가 유상으로 제공하는 서비스 또는 콘텐츠와 교환 가능한 전자적 가상통화를 말합니다.</string>
    <string name="Policy_Text8">1.5. ‘개별 이용약관’이란 본 서비스에 관하여 본 약관과는 별도로 ‘약관’, 가이드라인’, ‘정책’ 등의 명칭으로 당사가 배포 또는 게시한 문서를 말합니다.</string>
    <string name="Policy_Text9"> 2. 약관 동의</string>
    <string name="Policy_Text10">2.1 고객은 본 약관의 규정에 따라 본 서비스를 이용해야 합니다. 고객은 본 약관에 대해 유효하고 취소 불가능한 동의를 했을 경우에 한하여 본 서비스를 이용할 수 있습니다.</string>
    <string name="Policy_Text11">2.2. 고객이 미성년자일 경우에는 친권자 등 법정대리인의 동의를 얻은 후 본 서비스를 이용하십시오. 또한 고객이 본 서비스를 사업자를 위해 이용할 경우에는 당해 사업자 역시 본 약관에 동의한 후, 본 서비스를 이용하십시오.</string>
    <string name="Policy_Text12">2.3. 고객은 본 서비스를 실제로 이용함으로써 본 약관에 대해 유효하고 취소 불가능한 동의를 한 것으로 간주됩니다.</string>
    <string name="Policy_Text13">2.4. 본 서비스에 개별 이용약관이 존재할 경우, 고객은 본 약관 외에 개별 이용약관의 규정에 따라 본 서비스를 이용해야 합니다.</string>
    <string name="CashDone_Tile">충전 내역 확인</string>
    <string name="CashDone_Coin">2,000 Cash</string>
    <string name="CashDone_And">이며,</string>
    <string name="CashDone_Won">20,000 원</string>
    <string name="CashDone_And2">이고,</string>
    <string name="CashDone_Purchase">결제 방법은</string>
    <string name="CashDone_Done"> 입니다.</string>
    <string name="CashCharge_RechargeTitle">충전 액수</string>
    <string name="CashCharge_Cash">충전할 Cash</string>
    <string name="CashCharge_RechargeCashCount">Cash</string>
    <string name="CashCharge_RechargedCoin">환전된 Coin</string>
    <string name="CashCharge_PurchasedCoin">Coin</string>
    <string name="CashCharge_WonCount">원</string>
    <string name="CashCharge_PurchaseAccount">결제할 금액은</string>
    <string name="CashDone_sendTitle">송금자 정보 입력</string>
    <string name="CashDone_sendName">송금자명 입력</string>
    <string name="CashCharge_UseMileage">사용 마일리지는</string>
    <string name="CashDone_PurchaseMileage"> 마일리지로 충전</string>
    <string name="CashDone_ExchangeMileage">충전될 Cash는</string>
</resources>