<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Before"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="24dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CashCharge_RechargeTitle"
            android:textColor="#333742"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EditCharge"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="25dp"
            android:hint="@string/CashCharge_Cash"
            android:textAlignment="textStart"
            app:suffixText="@string/CashCharge_RechargeCashCount"
            app:suffixTextColor="#4971EF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#4971EF"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TransCharge"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:hint="@string/CashCharge_RechargedCoin"
            android:textAlignment="textStart"
            android:textColorHint="#DBDBDB"
            app:suffixText="@string/CashCharge_PurchasedCoin"
            app:suffixTextColor="#DBDBDB">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#DBDBDB"
                android:inputType="none"
                android:textAlignment="textEnd"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#DBDBDB"
                android:textStyle="bold"
                app:suffixText="@string/CashCharge_PurchasedCoin" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PurchaseCharge"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:hint="@string/CashCharge_PurchaseAccount"
            android:textAlignment="textStart"
            android:textColorHint="#E24F39"
            app:suffixText="@string/CashCharge_WonCount"
            app:suffixTextColor="#E24F39">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E24F39"
                android:foregroundTint="#FFFFFF"
                android:textAlignment="textEnd"
                android:inputType="none"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#E24F39"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>